meet the team napier links

--- a/team.html
+++ b/team.html
@@ -66,6 +66,7 @@
                         From Theory to the Real-World" due to be released by Springer this year. His research has examined problems in the area urban logistics including supermarket deliveries, parcel logistics and the delivery of delivery of Christmas presents by Santa Claus.  
                         An example of his work can be found <a href="https://foodel.napier.ac.uk">here.</a>
                      </p>
+                     <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/neil-urquhart">Find out more</a></button>
                  </div>
              </div>
              <div class="col-sm-6">
@@ -94,6 +95,7 @@
                         His current publication includes the challenges faced by researchers when conducting research in multilingual research setting. 
                         He is currently researching the impact of ICT on learning and teaching activities in higher education.
                      </p>
+                     <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/Wegene-demeke">Find out more</a></button>
                  </div>
              </div>
          </div>
@@ -116,6 +118,7 @@
                             She completed her PhD at the Advanced Processor Technologies Group (2006-2010) at the University of Manchester, where she was involved in inventing a revolutionary biological chip in the SpiNNaker project. 
                             She also worked on the Intrinsically Motivated Cumulative Learning Versatile Robots (IM-Clever) project at the University of Ulster ( 2010-2012) as a postdoc research associate for building a novel inhibitory control system using multiple FPGAs. 
                          </p>
+                         <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/Shufan-yang">Find out more</a></button>
                      </div>
                  </div>
                  <div class="col-sm-6">
@@ -144,6 +147,7 @@
                         His scholarly contributions were published in over 60 International journals and conferences. He received the best paper award from Applied Energy Journal in 2018. 
                         He was also featured among the top 2% research scientist in the world, ranking published by Stanford University in 2020 and 2021.
                      </p>
+                     <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/Jubaer-ahmed">Find out more</a></button>
                  </div>
              </div>
          </div>
