--- a/team.html
+++ b/team.html
@@ -65,11 +65,11 @@
                             Dr Stathis Tingas' research focuses on the areas of mathematical modelling and dynamics analysis of multiscale systems (chemical kinetics, brain metabolism, pharmacokinetics, population dynamics), 
                             the high fidelity (multi-dimensional) modeling of turbulent reacting flows with an emphasis on hydrogen and biofuel combustion and the mathematical modelling of EV-related technology.
                         </p>
-                        <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/neil-urquhart">Find out more</a></button>
+                        <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/stathis-tingas">Find out more</a></button>
                     </div>
                 </div>
                 <div class="col-sm-6">
-                    <img src="bios/neil_urquhart.png" class="card-img-top" alt="Stathis Tingas">
+                    <img src="bios/stathistingas.png" class="card-img-top" alt="Stathis Tingas">
                 </div>
             </div>
         </div>
@@ -81,7 +81,7 @@
         <div class="event2">  
             <div class="row no-gutters">
                 <div class="col-sm-6">
-                    <img src="bios/wegene_demeke.png" class="card-img-top" alt="Nicola Kennedy">
+                    <img src="bios/nicolakennedy.png" class="card-img-top" alt="Nicola Kennedy">
                 </div>
                 <div class="col-sm-6">
                     <div class="card-body2">
@@ -91,7 +91,7 @@
                             She supports the University’s school outreach and partnerships programme supporting the delivery of aspiration and 
                             attainment raising activity in schools throughout Scotland and the UK.
                         </p>
-                        <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/Wegene-demeke">Find out more</a></button>
+                        <button type="button" class="btn btn-outline-danger"><a href="https://www.napier.ac.uk/people/nicola-kennedy">Find out more</a></button>
                     </div>
                 </div>
             </div>
