--- a/team.html
+++ b/team.html
@@ -97,6 +97,30 @@
             </div>
         </div>
     </div>
+
+
+
+     <!--Paula Rodrigues-->
+     <div class="row">
+        <div class="event1">
+            <div class="row no-gutters">
+                <div class="col-sm-6">
+                    <div class="card-body">
+                        <h5 class="card-title">Paula Rodriguez</h5>
+                        <p class="card-text">
+                            Paula Rodriguez graduated from Edinburgh Napier University with a 1st class degree and Class Medal in International Tourism and Marketing Management in 2018. 
+                            After completing her undergraduate degree, she received a Postgraduate degree in Online Marketing and Digital Communication from the Universitat Abat Oliba. 
+                            Currently, Paula is completing her second undergraduate degree in Web Development and Design and works on the development of the STEM4enU website.
+                        </p>
+                        <button type="button" class="btn btn-outline-danger"><a href="https://www.linkedin.com/in/paula-rodriguez-romera-b4b82ab4/">Find out more</a></button>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <img src="bios/paularodriguez.png" class="card-img-top" alt="Paula Rodrigues">
+                </div>
+            </div>
+        </div>
+    </div>
             
 
 
