--- a/team.html
+++ b/team.html
@@ -59,6 +59,7 @@
                 <div class="col-sm-6">
                     <div class="card-body">
                         <h5 class="card-title">Dr Stathis Tingas</h5>
+                        <h4 class="card-positions">Outreach Lead</h4>
                         <p class="card-text">
                             Dr Stathis Tingas received a first degree (BScH) in Aeronautical Science from the Hellenic Air Force Academy in Greece in 2005 and a MSc and a PhD in Mechanics from the National Technical University of Athens in Greece in 2012 and 2016, respectively. 
                             Before his current appointment, he was an Aircraft Engineer with specialty in jet engines at the Hellenic Air Force (2005-2016), a postdoctoral research associate at KAUST (2016-2019) and a Lecturer in Engineering and Aviation at Perth College UHI (2019-2020).
@@ -86,6 +87,7 @@
                 <div class="col-sm-6">
                     <div class="card-body2">
                         <h5 class="card-title">Nicola Kennedy</h5>
+                        <h4 class="card-positions">Widenning Participation Team</h4>
                         <p class="card-text">
                             Nicola is a Widening Participation & Outreach Officer as part of Edinburgh Napier’s UK Recruitment & Widening Participation Team. 
                             She supports the University’s school outreach and partnerships programme supporting the delivery of aspiration and 
@@ -107,6 +109,7 @@
                 <div class="col-sm-6">
                     <div class="card-body">
                         <h5 class="card-title">Paula Rodriguez</h5>
+                        <h4 class="card-positions">Web Developer</h4>
                         <p class="card-text">
                             Paula Rodriguez graduated from Edinburgh Napier University with a 1st class degree and Class Medal in International Tourism and Marketing Management in 2018. 
                             After completing her undergraduate degree, she received a Postgraduate degree in Online Marketing and Digital Communication from the Universitat Abat Oliba. 
