--- a/team.html
+++ b/team.html
@@ -102,7 +102,7 @@
                        <div class="card-body">
                            <h5 class="card-title">Emma Parkinson</h5>
                            <p class="team-titles">International Officer</p>
-                            <p class="card-text pb-4">Emma is a School Operations Officer at Merchiston campus and supports a variety of activities across the School of Engineering and the Built Environment and the School of Computing, as well as the Scho9ol of Arts and Creative Industries.</p>
+                            <p class="card-text pb-4">Emma is a School Operations Officer at Merchiston campus and supports a variety of activities across the School of Engineering and the Built Environment and the School of Computing, as well as the School of Arts and Creative Industries.</p>
                             <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample4" aria-expanded="false" aria-controls="collapseExample">
                                Discover more
                              </button>
@@ -124,8 +124,8 @@
                     <div class="card-body">
                         <h5 class="card-title">Paula Rodriguez</h5>
                         <p class="team-titles">Web Developer</p>
-                        <p class="card-text pb-4">Paula Rodriguez is completing her second undergraduate degree in Web Development and Design and works on the development of the STEM4enU website.</p>
-                        <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
+                        <p class="card-text pb-5">Paula Rodriguez is completing her second undergraduate degree in Web Development and Design and works on the development of the STEM4enU website.</p>
+                        <button class="btn mt-4" type="button" data-toggle="collapse" data-target="#collapseExample3" aria-expanded="false" aria-controls="collapseExample">
                             Discover more
                         </button>
                     </div>
@@ -206,7 +206,7 @@
                     <img class="img-fluid" src="bios/shugan_yang.png" alt="Shufan Yang">
                     <div class="card-body">
                         <h5 class="card-title">Dr Shufan Yang</h5>
-                        <p class="card-text"> Dr Shufan Yang is the Associate Professor in Computational Intelligence, at the Software Engineering Technology (SET) subject group,  Edinburgh Napier University.</p>
+                        <p class="card-text pb-2"> Dr Shufan Yang is the Associate Professor in Computational Intelligence, at the Software Engineering Technology (SET) subject group,  Edinburgh Napier University.</p>
                         <button class="btn" type="button" data-toggle="collapse" data-target="#collapseExample6" aria-expanded="false" aria-controls="collapseExample">
                             Discover more
                           </button>
