images fixes in about page

--- a/about.html
+++ b/about.html
@@ -45,13 +45,13 @@
                     <div class="col-sm-12">
                         <div class="about-heading1">
                             <h1>About Our Vision</h1>
-                            <img class="img-fluid pb-8" src="gallery/scienceabout.jpg" alt="science">
+                            <img class="img-fluid" src="gallery/scienceabout.jpg" alt="science">
                         </div>
                     </div>
                 </div>
 
                 <div class="row text1">
-                    <div class="col-sm-12 pb-5">
+                    <div class="col-sm-12ß">
                         <p>“STEM4enU is Edinburgh Napier University’s (ENU) distinguished outreach platform for Science Technology Engineering and Mathematics (STEM).”</p>
                     </div>
                 </div>
@@ -61,7 +61,7 @@
                     <div class="col-sm-12">
                         <div class="about-heading2">
                             <h1>Our Mission</h1>
-                            <img class="img-fluid pb-4" src="gallery/scienceabout.jpg" alt="science">
+                            <img class="img-fluid" src="gallery/scienceabout.jpg" alt="science">
                         </div>
                     </div>
                 </div>
@@ -96,7 +96,7 @@
                     <div class="col-sm-12">
                         <div class="about-heading4">
                             <h1>Our Alliances</h1>
-                            <img class="img-fluid pb-4" src="gallery/scienceabout.jpg" alt="science">
+                            <img class="img-fluid" src="gallery/scienceabout.jpg" alt="science">
                         </div>
                     </div>
                 </div>
