--- a/events.html
+++ b/events.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--Boostrap CSS-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/eventssytles.css">
 
     <title>STEM4enU</title>
@@ -40,15 +40,83 @@
 <div class="container text-center">
  
     <h3 class="event-title">Your future, your STEM!</h3>
+
+<!------------------------------------------------CARROUSSEL----------------------------------------------------------->
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="finalselection/wks1.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks2.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks3.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks4.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks5.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks6.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks7.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks8.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks9.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks10.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks11.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks12.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks13.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks14.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks15.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks16.jpg" class="d-block w-100" alt="workshop">
+      </div>
+      <div class="carousel-item">
+        <img src="finalselection/wks17.jpg" class="d-block w-100" alt="workshop">
+      </div>
+    </div>
+
+    <!--buttons-->
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
+
+<h3 class="event-title">Discover our Workshops</h3>
+
 <!--------------------------------------------------FLYER-------------------------------------------------------------->
- 
 <div>
     <img src="gallery/stem4enu.jpg" class="img-fluid flyer" alt="Responsive image">
 </div>
 
 <!--------------------------------------------------WORKSHOPS-------------------------------------------------------------->
-<h3 class="event-title">Discover our Workshops</h3>
-
 <!--WORKSHOP 1: ARTIFICIAL INTELLIGENCE IN OPERATIONS RESEARCH-->
 <div class="card">
     <div class="row no-gutters">
@@ -142,9 +210,9 @@
     </script>
 
 <!--Boostrap Bundle with Popper-->
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
       
 </body>
 </html>
