--- a/events.html
+++ b/events.html
@@ -41,6 +41,7 @@
  
     <h3 class="event-title">Your future, your STEM!</h3>
 
+
 <!------------------------------------------------CARROUSSEL----------------------------------------------------------->
 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -108,10 +109,9 @@
     </button>
   </div>
 
-
+<!--------------------------------------------------FLYER-------------------------------------------------------------->
 <h3 class="event-title">Discover our Workshops</h3>
 
-<!--------------------------------------------------FLYER-------------------------------------------------------------->
 <div>
     <img src="gallery/stem4enu.jpg" class="img-fluid flyer" alt="Responsive image">
 </div>
@@ -119,8 +119,8 @@
 
 <!--------------------------------------------------WORKSHOPS-------------------------------------------------------------->
 <!--WORKSHOP 1: ARTIFICIAL INTELLIGENCE IN OPERATIONS RESEARCH-->
+</br>
 
-</br> 
 <div class="card">
     <div class="row no-gutters">
         <div class="col-sm-6 col-md-6">
@@ -128,8 +128,7 @@
                 <h5 class="card-title">Artificial Intelligence in operations research</h5>
                 <a href="team.html" class="leaders">Workshop leader Dr Neil Urquhart</a>
                 <p class="card-text">Each day Computer Science solves many problems that improve our lives and supports society. One of the most challenging areas is that of deliveries, ensuring that goods and services are delivered quickly and efficiently. This workshop introduces you to one of the fundamental problems in computer science, the Travelling Salesperson Problem. Although simple to understand, the problem is deceptively complex to solve. Using a problem based on the center of Edinburgh, we begin by trying to solve our problem manually. We then investigate how a simple rule called a Heuristic can help us solve the problem. Finally we use a simple Artificial Intelligence algorithm to help us find a solution quickly. Even if you've never written any programme code before you will find this an interesting introduction to computer science. We'll be using the Python language and data from Open Street map so you'll be working with tools used by Computer Science students and professionals.</p>
-                <a href="contact.html" class="btn">Sign Up Now</a>
-
+                <img src="reviews/neilworkshop.png" class="card-img-top" alt="Review Neil">
             </div>
         </div>
         <div class="col-sm-6 col-md-6">
@@ -144,14 +143,14 @@
 <div class="card">
     <div class="row no-gutters">
       <div class="col-sm-6">
-            <img src="gallery/info-seeking.png" class="card-img-top h-100" alt="honey">
+            <img src="gallery/info-seeking.png" class="card-img-top h-100" alt="info-seeking">
         </div>
         <div class="col-sm-6">
             <div class="card-body">
                 <h5 class="card-title">Information and feedback systems for decision making</h5>
                 <a href="team.html" class="leaders">Workshop leader Dr Wegene Demeke</a>
                 <p class="card-text">We made decisions all the time. Information is a key to make informed decisions. This workshop will introduce you to how previous decisions affect future outcomes, sometimes with delayed responses. We will introduce you to the role and impact of feedback. You will participate in building simple models and see the results of your decisions on various aspects of social and business entities, such as population growth, business profits, and growth of customer numbers. The model will enable you to explore likely future outputs based on current decisions.</p>
-                <a href="contact.html" class="btn">Sign Up Now</a>
+                <img src="reviews/wegeneworkshop.png" class="card-img-top" alt="Review Wegene">
             </div>
         </div>
     </div>
@@ -167,7 +166,7 @@
                 <h5 class="card-title">Exploring the future energy landscape</h5>
                 <a href="team.html" class="leaders">Workshop leader Dr Jubaer Ahmed</a>
                 <p class="card-text">We are running out of energy sources. Our conventional supplies of energy from Natural Gas, Oil and Coal are depleting and we need to stop using these anyway to save the world from global warming. What are we going to do without the supply of energy? Is this the end of the growth of modern civilization? Let’s have a look into the future energy landscape where renewable energy sources like Solar, Wind, Hydro, Nuclear, geothermal and Hydrogen cells will govern the energy supply. They are known to be green energy. Are they? Let’s explore it together.</p>
-                <a href="contact.html" class="btn">Sign Up Now</a>
+                <img src="reviews/jubaerworkshop.png" class="card-img-top" alt="Review Jubaer">
 
             </div>
         </div>
@@ -183,18 +182,27 @@
 <div class="card">
     <div class="row no-gutters">
       <div class="col-sm-6">
-            <img src="gallery/robot1.jpg" class="card-img-top h-100" alt="honey">
+            <img src="gallery/robot1.jpg" class="card-img-top h-100" alt="robot">
         </div>
         <div class="col-sm-6">
             <div class="card-body">
                 <h5 class="card-title">Reinforcement Learning based Intelligent learning for training robots</h5>
                 <a href="team.html" class="leaders">Workshop leader Dr Shufan Yang</a>
                 <p class="card-text">Reinforcement learning (RL), as a research paradigm, concerns not only trial-and-error learning without a model of the environment, but also deliberative planning with a model that can present the dynamics of the environment. Often robots can be re-trained with changes made to their environment using a reinforcement learning method. In this workshop, we are going to explore reinforcement learning based training algorithm to allow a robot to walk again after losing one of its legs. Four training strategies will be provided for students to explore. The simulation environment is based on Unity game platform and those algorithms performance will be evaluated by students who observe those actions and compared with researcher developed evaluation metrics. This allows students to have first-hand experience of state-of-art reinforcement learning algorithms.</p>
-                <a href="contact.html" class="btn">Sign Up Now</a>
+                <img src="reviews/sufanworkshop.png" class="card-img-top" alt="Review Jubaer">
             </div>
         </div>
     </div>
-</div>    
+</div>  
+
+<h3 class="event-title">What pupils think</h3>
+
+<div>
+  <img src="reviews/reviewallevent.png" class="img-fluid" alt="All reviews">
+</div>
+
+<a href="contact.html" class="btn">Get in touch</a>
+
  </div>
 
     <!--Footer-->
@@ -216,6 +224,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
       
 </body>
 </html>
