new course page added

--- a/team.html
+++ b/team.html
@@ -21,6 +21,7 @@
                 <a href="index.html">Home</a>
                 <a href="about.html">About</a>
                 <a href="events.html">Events</a>
+                <a href="newcourse.html">Incubation Hub</a>
                 <a href="team.html">Meet the Team</a>
                 <a href="contact.html">Contact</a>
             </div>
