--- a/index.html
+++ b/index.html
@@ -31,10 +31,11 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
             <a href="index.html">Home</a>
-            <a href="about.html">About</a>
-            <a href="events.html">Events</a>
-            <a href="team.html">Meet the Team</a>
-            <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
+                <a href="events.html">Events</a>
+                <a href="newcourse.html">Incubation Hub</a>
+                <a href="team.html">Meet the Team</a>
+                <a href="contact.html">Contact</a>
         </div>
         </div>
 
