--- a/reviews.html
+++ b/reviews.html
@@ -27,9 +27,11 @@
                  <div id="myNav" class="overlay">
                     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
                     <div class="overlay-content">
+                      <a href="index.html">Home</a>
                       <a href="about.html">About</a>
                       <a href="events.html">Events</a>
-                      <a href="team.html">Team</a>
+                      <a href="newcourse.html">Incubation Hub</a>
+                      <a href="team.html">Meet the Team</a>
                       <a href="contact.html">Contact</a>
                     </div>
                   </div>
