collapse font size and family amended

--- a/newcourse.html
+++ b/newcourse.html
@@ -73,7 +73,7 @@
 
 
 <!--------------------------------------------SECTION 4: UNITS----------------------------------------------------------->
-<div class="container text-center">
+<div class="units container text-center">
 
 <!--UNIT 1-->
 <div class="card">
@@ -96,7 +96,7 @@
             </div>
 
             <div class="collapse" id="collapseExample">
-                <div class="card card-body">
+                <div class="card-body">
                     The learners will familiarise with the mechanical engineering quantities used in the 
                     relevant engineering systems and will be introduced to the governing equations that are used to 
                     model systems of reacting flows. The fundamental physics that characterises such systems in the context 
@@ -140,7 +140,7 @@
             </div>
 
             <div class="collapse" id="collapseExample2">
-                <div class="card card-body">
+                <div class="card-body">
                     Modelling activities will be guided and suitable to the students' current abilities. Finally, experimental work will be carried out. 
                     Initially, the experimental protocol and aims will be delineated and discussed. Hence, the learners will 
                     a develop realistic testing plans within the boundaries given by the tutor and they will collect appropriate 
@@ -174,7 +174,7 @@
 
 
             <div class="collapse" id="collapseExample3">
-                <div class="card card-body">
+                <div class="card-body">
                     A section of the unit will be used to introduce the use of fiber optic for telecommunication purposes, 
                     i.e. broadband etc. which underpins its importance towards the concept of smart cities.
                 </div>
@@ -215,7 +215,7 @@
             </div>
 
             <div class="collapse" id="collapseExample4">
-                <div class="card card-body">
+                <div class="card-body">
                     Learners shall subsequently be set tasks to construct their own models. 
                     The mathematical modelling approach shall be presented. Then, modern mathematical models 
                     from relevant, accessible, and appropriate research papers, or other literature, will be 
