typo error for energy in new course page

--- a/newcourse.html
+++ b/newcourse.html
@@ -34,7 +34,7 @@
          
         <!--TITLE-->
 
-         <h1>Renewable enery<span style = "display: block;">technologies for smart</span><span style = "display: block;">sustainable cities</span></h1>
+         <h1>Renewable energy<span style = "display: block;">technologies for smart</span><span style = "display: block;">sustainable cities</span></h1>
     </div>
 </nav>
 </header>
@@ -63,7 +63,7 @@
 
     <!--------------------------------------------SECTION 3: COURSE INTRO---------------------------------------------------->
     <div class="col-sm-12 units-intro">
-        <h3 class="event-title">Renewable enery for technologies for smart sustainable cities</h3>
+        <h3 class="event-title">Renewable energy for technologies for smart sustainable cities</h3>
         <p class="course-intro-body">12-week pilot course composed of 4 units, each unit running for 3 weeks.</p>
         <p class="course-intro-body">This is a course for students enrolled on HNC/HND engineering programmes in Colleges in the SE Scotland.</p>
 
